1998-06-05  Alex Lancaster  <alex@santafe.edu>

	* gui.h: Fixed (#if 1) around the tk macros - erroneosly set to
	(#if 0).

1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* gui.h: Update documentation tags.
	Use #if 0 for macros to avoid multiple definitions in protocol.el.

1998-05-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* gui.h (_ArchivedGeometryWidget): Declare -loadWindowGeometryRecord,
	-registerAndLoad, +createBegin:, -updateArchiver, -getDestroyedFlag,
	and -drop.

1998-05-13  Marcus G. Daniels  <mgd@tewa.santafe.edu>

	* gui.h: InputWidget: new protocol.  Make CheckButton and Entry
	inherit from InputWidget, not _InputWidget.

1998-05-06  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* gui.h (_Widget, _WindowGeometryRecord, _ArchivedGeometryWidget,
	_Frame, _Canvas, _ProbeCanvas, _GraphElement, _Graph, _Histogram,
	_Label, _ClassDisplayLabel, _VarProbeLabel,
	_CompleteProbeDisplayLabel, _Button, _ClassDisplayHideButton,
	_SimpleProbeDisplayHideButton, _SuperButton, _InputWidget, _Entry,
	_MessageProbeEntry, _VarProbeEntry, _ButtonPanel, _Form,
	_Colormap, _Drawer, _Raster, _Pixmap, _CanvasAbstractItem,
	_CanvasItem, _CompositeItem, _NodeItem, _LinkItem, _OvalNodeItem,
	_RectangleNodeItem, _TextItem, _Circle, _Rectangle, _Line): Add
	phase tags.
	(_Widget, _WindowGeometryRecord, _ArchivedGeometryWidget, _Frame,
	_ProbeCanvas, _Raster, _ZoomRaster, _Pixmap, _CanvasAbstractItem,
	_NodeItem, _LinkItem): Reorder definitions for above.

	Move all //S and //D comments in internal protocols to external
	protocols.

	(_GraphElement): Declare -setOwnerGraph:, -createEnd, and
	+createOwnerGraph:.

	(_Raster): Declare +createBegin and -createEnd.

	(_Graph, _Histogram, _Label, _ClassDisplayLabel, _Button,
	_SimpleProbeDisplayHideButton, _InputWidget, _Form, _Colormap,
	_ZoomRaster): Declare -createEnd.
	
1998-04-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h: Add documentation tags to all protocols.  Bring in sync
	with tkobjc changes.
