@@ -1,6 +1,0 @@
-SWARMHOME=../..
-LIBNAME=gui
-OBJECTS=
-HEADERS=
-
-include $(SWARMHOME)/Makefile.lib
